--- a/bytelore-web/package.json
+++ b/bytelore-web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bytelore-web",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,5 +19,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
-  }
+  },
+  "devDependencies": {}
 }
